--- a/package.json
+++ b/package.json
@@ -1,10 +1,14 @@
 {
   "name": "nextnestserver",
-  "version": "1.0.0",
+  "version": "0.1.0",
+  "engines": {
+    "node": "20.12.2"
+  },
   "main": "index.js",
   "scripts": {
     "start": "node server/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "cd client && npm install && npm run build"
   },
   "keywords": [],
   "author": "",
