--- a/client/Caddyfile
+++ b/client/Caddyfile
@@ -34,4 +34,6 @@
 
     # if path doesn't exist, redirect it to 'index.html' for client side routing
     try_files {path} /index.html
+
+    reverse_proxy  http://nextnestserver.railway.internal:3000:8080
 }
