--- a/client/Caddyfile
+++ b/client/Caddyfile
@@ -20,6 +20,10 @@
         format json # set access log format to json mode
     }
 
+    handle /api* {
+        reverse_proxy  http://nextnestserver.railway.internal:3000
+    }
+
     # health check for railway
     rewrite /health /*
 
@@ -34,6 +38,4 @@
 
     # if path doesn't exist, redirect it to 'index.html' for client side routing
     try_files {path} /index.html
-
-    reverse_proxy  http://nextnestserver.railway.internal:3000
 }
