--- a/client/Caddyfile
+++ b/client/Caddyfile
@@ -20,22 +20,22 @@
         format json # set access log format to json mode
     }
 
-    handle_path /api* {
+    handle_path /api/* {
         reverse_proxy  http://nextnestserver.railway.internal:3000
     }
+    rewrite /health /
+    handle {
 
-    # health check for railway
-    rewrite /health /*
+        # serve from the 'dist' folder (Vite builds into the 'dist' folder)
+        root * dist
 
-    # serve from the 'dist' folder (Vite builds into the 'dist' folder)
-    root * dist
+        # enable gzipping responses
+        encode gzip
 
-    # enable gzipping responses
-    encode gzip
+        # serve files from 'dist'
+        file_server
 
-    # serve files from 'dist'
-    file_server
-
-    # if path doesn't exist, redirect it to 'index.html' for client side routing
-    try_files {path} /index.html
+        # if path doesn't exist, redirect it to 'index.html' for client side routing
+        try_files {path} /index.html
+    }
 }
