--- a/client/package.json
+++ b/client/package.json
@@ -13,7 +13,9 @@
     "@fortawesome/fontawesome-svg-core": "^6.7.2",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@vis.gl/react-google-maps": "^1.5.2",
     "bootstrap": "^5.3.3",
+    "dotenv": "^16.4.7",
     "install": "^0.13.0",
     "npm": "^11.1.0",
     "react": "^18.3.1",
